# OpenFusionKGQA

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.compose.neo4j.yaml  settings.llm.neo4j.example.yaml  settings.neo4j.example.yaml
.github/workflows/: ci.yml
docs/: artifacts.md  operator_guide.md
examples/: README.md
examples/docs/: graphrag.md  neo4j.txt
graphrag-optimization/: COLLABORATION.md  QUICK_START.md  README.md  requirements.txt  setup.sh  upload_to_git.bat  upload_to_git.sh  如何上传到GitHub.md  实现步骤_成员B.md  给同学B的任务说明.md
graphrag_v2/: .env.example  DEMO_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_EXTENDED_SUMMARY.md  PHASE3_FINAL_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_COMPLETION_REPORT.md  PHASE6_FINAL_SUMMARY.md  PHASE6_SUMMARY.md  PHASE6_TEST_REPORT.md  PROJECT_SUMMARY.md  README.md  USAGE_EXAMPLES.md  __init__.py  indexing.py  pytest.ini  requirements.txt  requirements_utf8.txt  run_demo.py  settings.yaml.template  test_config.py  test_data_model.py  test_extended_pipeline.py  test_full_pipeline.py  test_pipeline.py  test_prompts.py  test_query.py
scripts/: __init__.py  audit_release_candidate.py  benchmark_api_runtime.py  benchmark_hotpotqa_mini.py  benchmark_support_real_extract.py  check_api_runtime.py  evaluate_extraction.py  evaluate_qa.py  export_review_queue.py  judge_qa_with_llm.py  run_benchmark_suite.py  run_hotpotqa_isolated_benchmark.py  security_check.py  start_fresh_neo4j.sh  summarize_benchmark_reports.py  verify_release.sh
(+182 files in other folders)
