[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfusion-kgqa"
version = "0.2.0-beta.1"
description = "Open-corpus knowledge graph fusion and graph-grounded QA system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "tiktoken>=0.5.0",
    "networkx>=3.0",
    "neo4j>=5.0",
    "pypdf>=4.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25.0",
]

[project.scripts]
kgqa = "graphrag_v2.cli.main:main"

[tool.setuptools.packages.find]
include = ["graphrag_v2*"]
